--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "oneandone/toc",
+  "name": "webticity/toc",
   "description": "Enables a Table of Contents (TOC) know from Websites like Wikipedia as a plugin for each page which has headlines.",
   "keywords": [
     "structure",
